--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Load d3.js -->
 <script src="https://d3js.org/d3.v4.js"></script>
