--- a/index.html
+++ b/index.html
@@ -4,117 +4,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Load d3.js -->
-<script src="https://d3js.org/d3.v4.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"> </script>-->
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <style>
-#plotHolder {
-  float: right;
-}
-
-#inputs {
-  float:left;
-}
-* {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 70%;
-  width: auto;
-  margin-top: -22px;
-  padding: 8px;
-  color: black;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(255, 168, 29, 0.322);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-.dotHolder {
-  position: absolute;
-  bottom: 25%;
-  text-align: center;
-  left: 75%;
-
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
+  #plotHolder {
+    width: 100%;
+  }
 </style>
 
 <!-- Create a div where the graph will take place -->
@@ -124,36 +23,43 @@ This is an unfinished, unstyled prototype of the HLB grower web tool.
 To use the tool, customize the options on the left and observe the output graphs on the right.
 To cycle through all three graphs, use the left and right arrows located on the edges of the graphs.
 </p>
-<div id="inputs">
-  <label>Length of Simulation in Years</label>
-  <br>
-  <input type="number" id="projectionLength" min=1 max=40 value=5 />
-  <br><br>
-  <label>How many months until HLB arrives in your grove</label>
-  <br>
-  <input type="number" id="monthsToStart" min=0 max=480>
-  <br><br>
-  <label>% of Neighbors engaging in coordinated spraying</label>
-  <br>
-  <input type="range" min="0" max="100" value="50" class="slider" id="alpha">
-  <br><br>
-  <label>Cost of Spray per acre</label>
-  <br>
-  <input type="number" id="sprayCost" value=100>
-  <br><br>
-  <label>Number of Acres</label>
-  <br>
-  <input type="number" id="numAcres" value=55>
-  <br><br>
-  <label>Average Annual Yield (in cartons)</label>
-  <br>
-  <input type="number" id="annualYield" value="1000">
-  <br><br>
-  <label>Average Return per Carton (price of carton)</label>
-  <br>
-  <input type="number" id="unitPrice" value="14">
-
+<div class="container">
+  <div class="row">
+    <div id="inputs" class="col-sm" >
+      <label>Length of Simulation in Years</label>
+      <br>
+      <input type="number" id="projectionLength" min=1 max=40 value=5 />
+      <br><br>
+      <label>How many months until HLB arrives in your grove</label>
+      <br>
+      <input type="number" id="monthsToStart" min=0 max=480>
+      <br><br>
+      <label>% of Neighbors engaging in coordinated spraying</label>
+      <br>
+      <input type="range" min="0" max="100" value="50" class="slider" id="alpha">
+      <br><br>
+      <label>Cost of Spray per acre</label>
+      <br>
+      <input type="number" id="sprayCost" value=100>
+      <br><br>
+      <label>Number of Acres</label>
+      <br>
+      <input type="number" id="numAcres" value=55>
+      <br><br>
+      <label>Average Annual Yield (in cartons)</label>
+      <br>
+      <input type="number" id="annualYield" value="1000">
+      <br><br>
+      <label>Average Return per Carton (price of carton)</label>
+      <br>
+      <input type="number" id="unitPrice" value="14">
+    </div>
+    <div id="plotHolder" class="col-sm">
+      <div id="hlbSpread"></div>
+    </div>
+  </div>
 </div>
+<!--
 <div id="plotHolder">
   <div id="hlbSpread" class="mySlides fade"></div>
   <div id="yield" class="mySlides fade"></div>
@@ -166,9 +72,13 @@ To cycle through all three graphs, use the left and right arrows located on the 
     <span class="dot" onclick="currentSlide(3)"></span>
   </div>
 </div>
-
+-->
     
 <script>
+      //width = 700 - margin.left - margin.right,
+      //height = 600 - margin.top - margin.bottom;
+
+
   //D3 and Plotting
   function noaction(x,alpha,startingMonth) {
     if (x < (startingMonth * 30)) {
@@ -208,23 +118,25 @@ To cycle through all three graphs, use the left and right arrows located on the 
   function infectedYield(severity) {
     return Math.exp(-1.85 * severity);
   }
-  function plotHLBSpread() {
-
-     // set the dimensions and margins of the graph
-  var margin = {top: 50, right: 30, bottom: 30, left: 60},
-      width = 660 - margin.left - margin.right,
-      padding = 60,
-      height = 400 - margin.top - margin.bottom;
+  function plotHLBSpread() { 
   //Remove any previous graphics
   d3.select("#hlbSpread").html("")
   // append the svg object to the body of the page
+  //let height = d3.select("#plotHolder").node().getBoundingClientRect().height;
+  let height = 500;
+  let width = d3.select("#plotHolder").node().getBoundingClientRect().width;
+  console.log(height)
+  console.log(width)
+  var margin = {top: Math.floor(0.095 * height), right: Math.floor(0.052*width), bottom: Math.floor(0.07*height), left: Math.floor(0.105*width)};
+  console.log(margin)
+  var padding = Math.floor(0.122 * width);
+  //let height = container_height - margin.top - margin.bottom - padding;
+  //let width = container_width - margin.left - margin.right - padding;
   var svg = d3.select("#hlbSpread")
     .append("svg")
-      .attr("width", width + margin.left + margin.right + padding)
-      .attr("height", height + margin.top + margin.bottom + padding + padding)
       .attr("id", "hlbSpread_svg")
-      .attr("viewBox", "0 0 " + width + " " + height)
-      .attr("preserveAspectRatio", "xMidYMid meet")
+      .attr("width", width)
+      .attr("height", height)
     .append("g")
       .attr("transform",
             "translate(" + margin.left + "," + margin.top + ")");
@@ -247,39 +159,44 @@ To cycle through all three graphs, use the left and right arrows located on the 
   //X-axis
   var x = d3.scaleLinear()
     .domain(d3.extent(values, function(d) {return d.x; }))
-    .range([0, width - padding])
+    .range([0, width - padding - margin.left - margin.right - padding])
   svg.append("g")
-    .attr("transform", "translate(0," + height + ")")
+    .attr("transform", "translate(" + Math.floor(0.02 * width) + "," + (height - margin.top - padding) + ")")
     .call(d3.axisBottom(x).ticks(5));
   //X-axis label
   svg.append("text")
     .attr("class", "x_label")
     .attr("text-anchor", "end")
-    .attr("x", width-padding)
-    .attr("y", height + 40)
+    .attr("x", width-margin.right-padding-padding)
+    .attr("y", height-margin.top-(0.5*padding))
+    .attr("font-size", "0.9em")
     .text("Days since today");
 
   // Add Y axis
   var y = d3.scaleLinear()
     .domain([0, d3.max(values, function(d) { return +d.y; })])
-    .range([ height, 0 ]);
+    .range([ height - margin.top - padding, 0 ]);
   svg.append("g")
+    .attr("transform", "translate(" + Math.floor(0.02 * width) + ", 0)")
     .call(d3.axisLeft(y));
   // Add Y-axis label
   svg.append("text")
     .attr("class", "y_label")
     .attr("text-anchor", "end")
-    .attr("y", -50)
+    .attr("y", - Math.floor(0.105 * width))
     .attr("dy", ".75em")
+    .attr("font-size", "0.9em")
     .attr("transform", "rotate(-90)")
     .text("% of Grove infected with HLB");
 
   svg.append("text")
-        .attr("x", ( (width - padding) / 2))             
+        .attr("x", margin.left + padding)             
         .attr("y", 0 - (margin.top / 2))
         .attr("class", "title")
-        .attr("text-anchor", "middle")  
-        .style("font-size", "20px") 
+        .attr("text-anchor", "middle") 
+        .attr("font-style", "italic") 
+        .attr("font-weight", "bold")
+        .style("font-size", "0.9em") 
         .text("Spread of HLB in Your Grove Over Next " + numYears + " Years");
   // color palette
   var res = sumstat.map(function(d){ return d.key }) // list of group names
@@ -302,25 +219,25 @@ To cycle through all three graphs, use the left and right arrows located on the 
             (d.values)
         })
   svg.append("text")
-		.attr("transform", "translate(" + ( (width - padding) +3) + "," + y(noaction(projectionLength, alpha, startingMonth)) + ")")
+		.attr("transform", "translate(" + ( (width - padding - padding - margin.right - margin.left)) + "," + y(noaction(projectionLength, alpha, startingMonth)) + ")")
 		.attr("dy", ".35em")
 		.attr("text-anchor", "start")
 		.style("fill", "red")
 		.text("No Action");
 
 	svg.append("text")
-		.attr("transform", "translate(" + (width-padding+3) + "," + y(individualspray(projectionLength, alpha, startingMonth)) + ")")
+		.attr("transform", "translate(" + (width-padding - padding - margin.right - margin.left) + "," + y(individualspray(projectionLength, alpha, startingMonth)) + ")")
 		.attr("dy", ".35em")
 		.attr("text-anchor", "start")
 		.style("fill", "steelblue")
-		.text("Individual Spraying");
+		.text("Ind. Spray");
   
   svg.append("text")
-		.attr("transform", "translate(" + (width-padding+3) + "," + y(groupspray(projectionLength, alpha, startingMonth)) + ")")
+		.attr("transform", "translate(" + (width-padding- padding - margin.right-margin.left) + "," + y(groupspray(projectionLength, alpha, startingMonth)) + ")")
 		.attr("dy", ".35em")
 		.attr("text-anchor", "start")
 		.style("fill", "#4daf4a")
-		.text("Coordinated Spraying");
+		.text("Coord. Spray");
 
   }
   
@@ -562,12 +479,14 @@ To cycle through all three graphs, use the left and right arrows located on the 
 
   function refreshOutput() {
     plotHLBSpread();
-    plotYield();
-    returnsPlot();
+    //plotYield();
+    //returnsPlot();
   }
   refreshOutput();
   d3.select("#inputs").selectAll("input").on("input change", refreshOutput);
+  d3.select(window).on('resize', refreshOutput);
   //Slideshow stuff
+  /*
   var slideIndex = 1;
   showSlides(slideIndex);
 
@@ -595,7 +514,7 @@ To cycle through all three graphs, use the left and right arrows located on the 
     }
     slides[slideIndex-1].style.display = "block";
     dots[slideIndex-1].className += " active";
-  } 
+  } */
   
   
   </script>
