--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 <!-- Create a div where the graph will take place -->
 <h1>HLB Grower Web Tool</h1>
 <p>
-This is an unfinished, unstyled prototype of the HLB grower web tool. 
-To use the tool, customize the options on the left and observe the output graphs. Mobile users are encouraged
-to use landscape orientation for a better experience.
+This is a prototype of the HLB grower web tool. 
+To use the tool, customize the options on the left and observe the output graphs.
 </p>
 <div class="container">
   <div class="row">
@@ -38,7 +37,7 @@ to use landscape orientation for a better experience.
       <br><br>
       <label>Cost of Spray per acre</label>
       <br>
-      <input type="number" id="sprayCost" value=100>
+      <input type="number" id="sprayCost" value=15>
       <br><br>
       <label>Number of Acres</label>
       <br>
