fixed xlab on profit plot

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@ To use the tool, customize the options on the left and observe the output graphs
       .attr("x", width-margin.right-padding-padding)
       .attr("y", height-margin.top - Math.floor(1.2 * padding))
       .attr("font-size", "0.9rem")
-      .text("Days since today");
+      .text("Years since today");
 
     // Add Y axis
     var y = d3.scaleLinear()
