--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Since the late 18th century, Huanglongbing (HLB) has devastated citrus productio
 <h2>More Information</h2>
 <p>Funding to support the development of this tool provided by a CDFA grant (#19-0001-034-SF) and USDA-NFA ECDRE grant (#2017-70016-26053), and computing resources were provided by the IBM Power Systems Academic Initiative. For more information about the research that powers this tool, check out the research notes and publication in the links section or contact us at <a href="mailto:kaplanj@csus.edu">kaplanj@csus.edu</a>.</p>
 <h3>Disclaimer</h3>
-The insights generated from this tool are based on the simulated outcomes of representative California citrus growers. Many factors that influence a particular operation such as weather and geography could cause your results to differ from the information presented here. For personalized information about HLB and running an operation in your region, please consult your local extension agents and pest advisors.
+The insights generated from this tool are based on the simulated outcomes of representative California citrus growers. Many factors that influence a particular operation such as weather and geography could cause your results to differ from the information presented here. Additional management strategies such as tree removal can influence HLB spread as well, but are not considered here. For personalized information about HLB and running an operation in your region, please consult your local extension agents and pest advisors.
 <h3>Helpful Links</h3>
 <p>
 <a href="https://www.csus.edu/faculty/k/kaplanj/hlbtool/hlb_grower_web_tool_tech_note.pdf">Technical details of this tool</a><br/>
